# JasusiCLI

./: .env.template  .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  requirements.txt  settings.json
.github/workflows/: ci.yml
.windsurf/: rules.md
jasusi_cli/: __init__.py  main.py
jasusi_cli/api/: client.py  provider_client.py
jasusi_cli/bootstrap/: graph.py
jasusi_cli/cli/: commands.py  entry.py  history.py  output.py  repl.py  spinner.py  task_runner.py
jasusi_cli/config/: settings.py
jasusi_cli/core/: clients.py  memory.py  orchestrator.py  router.py  runtime.py
jasusi_cli/integration/: mock_clients.py  wiring.py  worm_ledger.py
jasusi_cli/memory/: compaction.py  session_store.py
jasusi_cli/routing/: scored_router.py
jasusi_cli/security/: injection_guard.py  prompt_builder.py
jasusi_cli/tests/: test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
jasusi_cli/tools/: architect.py  bash_tool.py  coder.py  executor.py  file_read_tool.py  permissions.py  registry.py  researcher.py  reviewer.py  schema.py  system.py
jasusi_cli/tools/implementations/: bash_tool.py  file_tools.py
proto/: jasusi.proto
rust/crates/jasusi-core/: Cargo.toml  build.rs
rust/crates/jasusi-core/src/: main.rs
rust/crates/jasusi-core/src/actors/: mod.rs  session.rs  supervisor.rs  tool.rs
rust/crates/jasusi-core/src/audit/: entry.rs  ledger.rs  mod.rs
rust/crates/jasusi-core/src/memory/: compaction.rs  mod.rs  session_store.rs  transcript.rs
rust/crates/jasusi-core/src/rpc/: mod.rs  server.rs
rust/crates/jasusi-core/src/sandbox/: ebpf.rs  landlock.rs  mod.rs  profiles.rs  seccomp.rs  stack.rs
rust/crates/jasusi-core/src/security/: api_key.rs  firewall.rs  injection_guard.rs  mod.rs  sanitizer.rs
rust/crates/jasusi-core/tests/: mock_parity_harness.rs
rust/crates/plugins/src/: hooks.rs
ui/: index.html
