[package]
name = "jasusi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
syntect = "5"
tools = { path = "../tools" }
tokio = { version = "1.38", features = ["full"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
kameo = { version = "0.15", features = ["macros", "remote"] }
dirs = "5"
libc = "0.2"
qdrant-client = "1.11"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
regex = "1"
base64 = "0.22"
unicode-normalization = "0.1"
jsonschema = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio-stream = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
seccompiler = "0.4"
landlock = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[target.'cfg(target_os = "linux")'.build-dependencies]
aya-build = "0.1"

[lints]
workspace = true

[dev-dependencies]
mock-anthropic-service = { path = "../mock-anthropic-service" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
